<resources>
    <string name="app_name">FireBaseAllDemo</string>

    <string name="picker_voip_cpu_error">Sorry  Function temporarily does not support your models</string>

    <string name="picker_cancel">Cancel</string>
    <string name="picker_setting">Settings</string>

    <string name="picker_resume">Resume</string>
    <string name="picker_no">No</string>

    <string name="picker_failure">Failure</string>
    <string name="picker_title_dialog">Reminder</string>
    <string name="picker_message_permission_rationale">Allow the following permissions for the program to continue execution：\n\n%1$s</string>
    <string name="picker_message_permission_always_failed">We need the following permissions, please open for us in the settings：\n\n%1$s</string>
    <!-- PictureSelectorActivity -->
    <string name="picker_picsel_toolbar">Picture</string>
    <string name="picker_picsel_toolbar_send">Choose</string>
    <string name="picker_picsel_toolbar_sure">Sure</string>
    <string name="picker_picsel_toolbar_send_num">Choose(%d/%d)</string>
    <string name="picker_picsel_pictype">Picture</string>
    <string name="picker_picsel_toolbar_preview">Preview</string>
    <string name="picker_picsel_toolbar_preview_num">Preview(%d)</string>
    <string name="picker_picsel_selected_max">You can only choose %d picture at most.</string>
    <string name="picker_picsel_take_picture">Take picture</string>
    <string name="picker_picsel_catalog_allpic">All pictures</string>
    <string name="picker_picsel_catalog_number">%d</string>

    <!-- PicturePreviewActivity -->
    <!--<string name="picker_picprev_origin">Full Image</string>-->
    <!--<string name="picker_picprev_origin_size">Full Image(%s)</string>-->
    <string name="picker_picprev_select">Select</string>

    <!--<string name="picker_permission_grant_needed">You have to grant permissions in setting</string>-->
    <string name="picker_empty_sdcard">No SD card</string>
    <string name="picker_photo_failure">Photo failure</string>
    <string name="picker_photo_edit">Edit</string>
    <string name="picker_file_error">File Error</string>
</resources>
